<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="center_horizontal"
        android:text="@string/thong_tin_san_pham"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edMaSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ma_san_pham" />

    <EditText
        android:id="@+id/edTenSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ten_san_pham" />

    <EditText
        android:id="@+id/edSL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/so_luong"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/submit" />
</LinearLayout>